# fftx

./: meson.build  readme.md
assets/: powers-10.json  powers-2.json
benchmarks/: bench.cpp  bench_cuda.cpp  bench_threads.cpp  fft.cu  meson.build  plot.py  powers10.cpp  powers2.cpp  primes.cpp  primitives.cpp  wrappers.hpp
examples/: ex01.cpp  ex02.cpp  ex03.cpp  ex04.cpp  meson.build  modulo.h
include/: fftx-1d.hpp  fftx-fixed.hpp  fftx-math.hpp  fftx-nd.hpp  fftx-primitives.hpp  fftx.hpp  meson.build
include/fftx/: 1d.hpp  exception.hpp  math.hpp  meson.build  nd.hpp  primitives.hpp
tests/: judge.sh  meson.build
tests/boost_UT/: convolution_ut.cpp  inverse_ut.cpp  math.cpp  meson.build
tests/fft-1d/: meson.build
tests/fft-1d/convolution/: brute-force.cpp  divide-n-conquer.cpp  gen_test.py  in-place.cpp  iterative.cpp  meson.build
tests/fft-1d/inverse/: brute-force.cpp  divide-n-conquer.cpp  gen_test.py  in-place.cpp  iterative.cpp  meson.build
tests/fft-2d/: fft-2d.cpp  fft-3d.cpp  meson.build
tests/primitives/: convolution_ut.cpp  inverse_ut.cpp  meson.build
